syntax = "proto3";

option csharp_namespace = "Equipment.NetworkAnalyzer";

package equipment;

// The positioner service definition.
service NetworkAnalyzer {
  //
  rpc Initialize (InitParams) returns (Reply);
  rpc ReadTrace(Id) returns (ReadTraceResponse);
 
}

// The request message 
message InitParams {
  string id = 1;
   double power = 2;
  repeated double frequency = 3;
 
}

// The response message
message Reply {
  string message = 1;
}

message Id {
	string id = 1;
}
message ReadTraceResponse {		
	repeated double frequency = 1;
	repeated double magnitude = 2;
}

message Empty {}

